contact page remodified

--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,5 @@
 this is contact page ::
-adding this to commit :::;
+ 
+now line above this is cut down and now we adding 
+these lines .
+can see in git log
